force-app/main/default/objects/Log__c/fields/AggregateQueries__c.field-meta.xml
<CustomField>
    <fullName>AggregateQueries__c</fullName>
    <description>The number of aggregate queries that have been processed with any SOQL query statement.</description>
    <label>Aggregate Queries</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>