force-app/main/default/objects/Log__c/fields/APIResponseCode__c.field-meta.xml
<CustomField>
    <fullName>APIResponseCode__c</fullName>
    <description>The HTTP status code 200, 400, etc</description>
    <label>API Response Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>