force-app/main/default/objects/Log__c/fields/Callouts__c.field-meta.xml
<CustomField>
    <fullName>Callouts__c</fullName>
    <description>The number of Web service statements that have been processed.</description>
    <label>Callouts</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>