force-app/main/default/objects/Log__c/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <description>Name of the class that was executing for this log.</description>
    <label>Class Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>