force-app/main/default/objects/Log__c/fields/CPUTime__c.field-meta.xml
<CustomField>
    <fullName>CPUTime__c</fullName>
    <description>CPU time is calculated for the executing Apex code, and for any processes that are called from this code, such as package code and workflows. CPU time is private for a transaction and is isolated from other transactions. Operations that don’t consume application server CPU time aren’t counted toward CPU time.</description>
    <label>CPU Time</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>