force-app/main/default/objects/Log__c/fields/DMLRows__c.field-meta.xml
<CustomField>
    <fullName>DMLRows__c</fullName>
    <description>The number of records that have been processed with any statement that counts against DML limits, such as DML statements, the Database.emptyRecycleBin method, and other methods.</description>
    <label>DML Rows</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>