force-app/main/default/objects/Log__c/fields/DMLStatements__c.field-meta.xml
<CustomField>
    <fullName>DMLStatements__c</fullName>
    <description>The number of DML statements (such as insert, update or the database.EmptyRecycleBin method) that have been called.</description>
    <label>Number of DML statements</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>