force-app/main/default/objects/Log__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <description>The time when the execution of the apex transaction is completed.</description>
    <label>End Time</label>
    <length>80</length>
    <type>Text</type>
</CustomField>