force-app/main/default/objects/Log__c/fields/HeapSize__c.field-meta.xml
<CustomField>
    <fullName>HeapSize__c</fullName>
    <description>The approximate amount of memory (in bytes) that has been used for the heap.</description>
    <label>Heap Size</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>