force-app/main/default/objects/Log__c/fields/IntegrationType__c.field-meta.xml
<CustomField>
    <fullName>IntegrationType__c</fullName>
    <description>The type of integration inbound or outbound.</description>
    <label>Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>