force-app/main/default/objects/Log__c/fields/LineNumber__c.field-meta.xml
<CustomField>
    <fullName>LineNumber__c</fullName>
    <description>The line where the code have issue or logger is placed.</description>
    <label>Line Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>