force-app/main/default/objects/Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Message defined by the System Apex class or custom message set while using logger.</description>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>