force-app/main/default/objects/Log__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>Method name defined by the System Apex class in the transaction.</description>
    <label>Method</label>
    <length>80</length>
    <type>Text</type>
</CustomField>