force-app/main/default/objects/Log__c/fields/Queries__c.field-meta.xml
<CustomField>
    <fullName>Queries__c</fullName>
    <description>The number of SOQL queries that have been issued.</description>
    <label>Number of SOQL queries</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>