force-app/main/default/objects/Log__c/fields/QueryLocatorRows__c.field-meta.xml
<CustomField>
    <fullName>QueryLocatorRows__c</fullName>
    <description>The number of records that have been returned by the Database.getQueryLocator method.</description>
    <label>Query Locator Rows</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>