force-app/main/default/objects/Log__c/fields/QueryRows__c.field-meta.xml
<CustomField>
    <fullName>QueryRows__c</fullName>
    <description>The number of records that have been returned by issuing SOQL queries.</description>
    <label>Number of query rows</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>