force-app/main/default/objects/Log__c/fields/Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_ID__c</fullName>
    <description>Salesforce record Id or the external Id</description>
    <label>Record ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>