force-app/main/default/objects/Log__c/fields/RecordLink__c.field-meta.xml
<CustomField>
    <fullName>RecordLink__c</fullName>
    <description>Salesforce record link</description>
    <formula>IF( NOT(ISBLANK(Record_ID__c)), HYPERLINK( Record_ID__c ,&#39;Record&#39; ),&#39;&#39;)</formula>
    <label>Record Link</label>
    <type>Text</type>
</CustomField>