force-app/main/default/objects/Log__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <description>Use for API request JSON, if the length is greater than 131072 then an attachment will be created for this request.</description>
    <label>Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>