force-app/main/default/objects/Log__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>Use for API response JSON, if the length is greater than 131072 then an attachment will be created for this response.</description>
    <label>Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>