force-app/main/default/objects/Log__c/fields/ServiceName__c.field-meta.xml
<CustomField>
    <fullName>ServiceName__c</fullName>
    <description>Use in case of an API, it contains the serviceName.</description>
    <label>Service Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>