force-app/main/default/objects/Log__c/fields/SOSLQueries__c.field-meta.xml
<CustomField>
    <fullName>SOSLQueries__c</fullName>
    <description>The number of SOSL queries that have been issued.</description>
    <label>Number of SOSL queries</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>