force-app/main/default/objects/Log__c/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <description>Get the stack trace of the Apex transaction.</description>
    <label>Stack Trace</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>