force-app/main/default/objects/Log__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <description>The time when the apex transaction started.</description>
    <label>Start Time</label>
    <length>80</length>
    <type>Text</type>
</CustomField>