force-app/main/default/objects/Log__c/fields/TimeTaken__c.field-meta.xml
<CustomField>
    <fullName>TimeTaken__c</fullName>
    <description>Time take to complete the apex transaction execution.</description>
    <inlineHelpText>In Milliseconds</inlineHelpText>
    <label>Time Taken</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>