force-app/main/default/objects/Log__c/fields/TransactionId__c.field-meta.xml
<CustomField>
    <fullName>TransactionId__c</fullName>
    <description>Unique Id generated for each transaction to identify if multiple logs are generated.</description>
    <externalId>true</externalId>
    <label>Transaction Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>