force-app/main/default/objects/Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Use to identify if the log generated for API, exception, or just a general log record.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>Log</fullName>
            </value>
            <value>
                <fullName>Before Insert</fullName>
            </value>
            <value>
                <fullName>Before Update</fullName>
            </value>
            <value>
                <fullName>Before Delete</fullName>
            </value>
            <value>
                <fullName>After Insert</fullName>
            </value>
            <value>
                <fullName>After Update</fullName>
            </value>
            <value>
                <fullName>After Delete</fullName>
            </value>
            <value>
                <fullName>After Undelete</fullName>
            </value>
            <value>
                <fullName>Batch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>