force-app/main/default/objects/Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TransactionId__c</columns>
    <columns>Type__c</columns>
    <columns>TimeTaken__c</columns>
    <columns>HeapSize__c</columns>
    <columns>Message__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ServiceName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>