force-app/main/default/objects/Log__c/listViews/API.listView-meta.xml
<ListView>
    <fullName>API</fullName>
    <columns>NAME</columns>
    <columns>TransactionId__c</columns>
    <columns>Type__c</columns>
    <columns>TimeTaken__c</columns>
    <columns>HeapSize__c</columns>
    <columns>Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>API</value>
    </filters>
    <label>API</label>
</ListView>