force-app/main/default/objects/Log__c/listViews/Member_profile_update.listView-meta.xml
<ListView>
    <fullName>Member_profile_update</fullName>
    <columns>NAME</columns>
    <columns>TransactionId__c</columns>
    <columns>Type__c</columns>
    <columns>TimeTaken__c</columns>
    <columns>HeapSize__c</columns>
    <columns>Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ServiceName__c</field>
        <operation>equals</operation>
        <value>Member profile update</value>
    </filters>
    <label>Member profile update</label>
</ListView>